# lang

./: Cargo.toml  build.rs  setup.py
.github/workflows/: publish-release.yml
Lib/gflanguages/: __init__.py  languages_public.proto  languages_public_pb2.py
Lib/gflanguages/data/languages/: aa_Latn.textproto  af_Latn.textproto  agq_Latn.textproto  ak_Latn.textproto  am_Ethi.textproto  ar_Arab.textproto  as_Beng.textproto  ast_Latn.textproto  az_Cyrl.textproto  az_Latn.textproto  bal_Arab.textproto  bas_Latn.textproto  bax_Bamu.textproto  be_Cyrl.textproto  bg_Cyrl.textproto  bn_Beng.textproto  bo_Tibt.textproto  br_Latn.textproto  brx_Deva.textproto  bs_Cyrl.textproto  bs_Latn.textproto  ca_Latn.textproto  ce_Cyrl.textproto  ceb_Latn.textproto  chr_Cher.textproto  ckb_Arab.textproto  cnr_Cyrl.textproto  cnr_Latn.textproto  cs_Latn.textproto  cy_Latn.textproto  da_Latn.textproto  de_Latn.textproto  dje_Latn.textproto  doi_Deva.textproto  dsb_Latn.textproto  dua_Latn.textproto  dv_Diak.textproto  dyo_Latn.textproto  dz_Tibt.textproto  ee_Latn.textproto  (+159 more)
src/: lib.rs
tests/: test_data_languages.py  test_gflanguages_api.py  test_parsable.py
